Fixing some issues

--- a/docs/Infinite series/2.C0=0.md
+++ b/docs/Infinite series/2.C0=0.md
@@ -91,7 +91,7 @@ The third equations gives us the initial condition of the second one. The first 
 One can see that each $V_i,k$ will introduce a new factor $(C_1^k-C_1^i)^{-1}$ so we have
 
 $$
-V_{i,k}\xrightarrow{\prod_{l=k+1}^i(C_1^k-C_1^l)}V_{k,k}V_{i,k}\xrightarrow{\prod_{l=1}^{k-1}(C_1^l-C_1^k)}V_{1,1}=1
+V_{i,k}\xrightarrow{\prod_{l=k+1}^i(C_1^k-C_1^l)}V_{k,k}\xrightarrow{\prod_{l=1}^{k-1}(C_1^l-C_1^k)}V_{1,1}=1
 $$
 
 We thus can model $V$ as
