Finished adding things about series comp

--- a/docs/Infinite series/2.C0=0.md
+++ b/docs/Infinite series/2.C0=0.md
@@ -17,7 +17,7 @@ $$
 p_{j+k}(x)=p_k(p_j(x))=\sum_n C_{n,k}\left(\sum_i C_{i,j} x^i\right)^n=\sum_n\sum_i C_{n,k}\hat B_{i,n}(C_{r,j})x^i
 $$
 
-This leads us to the following defining equation:
+With $\hat B(n,k)$, the Ordinary Bell polynomial. $C_{r,j}= C_{r,j}|_{r=1}^\infty$, an ordered list as input to the polynomial. This leads us to the following defining equation:
 
 $$
 C_{n,j+k}=\sum_i C_{i,j} \hat B_{n,i}(C_{r,k})=\sum_i C_{i,k} \hat B_{n,i}(C_{r,j})
@@ -32,10 +32,10 @@ $$
 This is a way to compute them. A way that I found more useful was to take k=1 and The first equality.
 
 $$
-C_{n,j}=\sum_i C_{i,j} \hat B_{n,i}(C_r)
+C_{n,j+1}=\sum_i C_{i,j} \hat B_{n,i}(C)
 $$
 
-The case $C_1=1$ is especially nice given $C$ 's become polynomial in $j$. This case will thus be studied in its own page.
+The case $C_1=1$ is especially nice given $C$ 's become polynomial in $j$. This case will thus be studied in its own page that you can go to now if this is the case that interests you.
 
 Staying in the case $C_1\ne1$, here is some examples of $C$'s:
 
@@ -97,7 +97,7 @@ $$
 We thus can model $V$ as
 
 $$
-V_{i,k}=\frac{U_{i,k}}{\prod_{l=1\ne l}^i(C_1^k-C_1^l)}
+V_{i,k}=\frac{U_{i,k}}{\prod_{l=1\ne k}^i(C_1^k-C_1^l)}
 $$
 
 The second equation then becomes
